[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "callhub-mcp-dxt"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.5.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "selenium>=4.15.0",
    "urllib3>=2.0.7",
    "webdriver-manager>=4.0.1",
]

[tool.setuptools]
packages = ["src"]

[project.scripts]
bundle-deps = "python:install_deps"
